--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "name": "test_pwa",
   "short_name": "test_pwa",
   "display": "standalone",
-  "start_url": "/",
-  "scope": "/",
+  "start_url": "https://sillyzhe.github.io/test_page/",
+  "scope": "https://sillyzhe.github.io/test_page/",
   "theme_color": "#faad14",
   "capture_links": "new-client",
   "background_color": "#ffffff",
